better models, single source hugginface

--- a/Week3_lab.ipynb
+++ b/Week3_lab.ipynb
@@ -1002,8 +1002,8 @@
     "    \n",
     "    return torch.stack(images)\n",
     "\n",
-    "# Load 32 real images for evaluation\n",
-    "real_images = load_real_images('celeba_data', num_images=32, image_size=256)\n",
+    "# Load 50 real images for evaluation\n",
+    "real_images = load_real_images('celeba_data', num_images=50, image_size=256)\n",
     "print(f\"✅ Loaded {len(real_images)} real images, shape: {real_images.shape}\")\n",
     "\n",
     "# Visualize some real images\n",
@@ -1111,8 +1111,8 @@
     "        inference_time = time.time() - start_time\n",
     "    return generated, inference_time\n",
     "\n",
-    "# Generate 32 images\n",
-    "dcgan_images, dcgan_time = generate_dcgan_images(dcgan_generator, num_images=32)\n",
+    "# Generate 50 images\n",
+    "dcgan_images, dcgan_time = generate_dcgan_images(dcgan_generator, num_images=50)\n",
     "print(f\"✅ DCGAN: Generated {len(dcgan_images)} images in {dcgan_time:.3f} seconds\")\n",
     "print(f\"   Image shape: {dcgan_images.shape}\")\n",
     "\n",
@@ -1136,8 +1136,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# Model 2: StyleGAN2-ADA (Advanced GAN)\n",
-    "State-of-the-art GAN with style-based architecture and adaptive discriminator augmentation."
+    "# Model 2: LDM - Latent Diffusion Model (CompVis)\n",
+    "Latent Diffusion Model trained on CelebA-HQ - generates images in latent space then decodes."
    ]
   },
   {
@@ -1148,18 +1148,16 @@
    "outputs": [],
    "source": [
     "# ============================================\n",
-    "# CELL 8: StyleGAN2 - Clone and setup\n",
+    "# CELL 8: LDM (Latent Diffusion Model) - Load from HuggingFace\n",
     "# ============================================\n",
-    "# Clone NVIDIA's StyleGAN2-ADA PyTorch repo\n",
-    "!git clone https://github.com/NVlabs/stylegan2-ada-pytorch.git\n",
-    "%cd stylegan2-ada-pytorch\n",
+    "from diffusers import DiffusionPipeline\n",
     "\n",
-    "# Download pretrained model on FFHQ (closest to CelebA-HQ available officially)\n",
-    "# Note: Official CelebA-HQ model is not publicly released, using FFHQ as high-quality face alternative\n",
-    "!pip install gdown\n",
-    "!gdown --id 1Dax4bH0dNEe8O0TzR0EeDTDCPVoZoWXI -O ffhq256.pkl\n",
+    "# Load pretrained LDM on CelebA-HQ 256x256\n",
+    "ldm_pipeline = DiffusionPipeline.from_pretrained(\"CompVis/ldm-celebahq-256\")\n",
+    "ldm_pipeline = ldm_pipeline.to(device)\n",
     "\n",
-    "print(\"✅ StyleGAN2-ADA setup complete!\")"
+    "print(\"✅ LDM (Latent Diffusion Model) loaded\")\n",
+    "print(f\"   Model: CompVis/ldm-celebahq-256\")"
    ]
   },
   {
@@ -1170,52 +1168,38 @@
    "outputs": [],
    "source": [
     "# ============================================\n",
-    "# CELL 9: Load and generate with StyleGAN2\n",
+    "# CELL 9: Generate images with LDM\n",
     "# ============================================\n",
-    "import sys\n",
-    "sys.path.insert(0, 'stylegan2-ada-pytorch')\n",
-    "import pickle\n",
-    "import dnnlib\n",
-    "import legacy\n",
+    "def generate_ldm_images(pipeline, num_images=32, batch_size=8, num_inference_steps=50):\n",
+    "    \"\"\"Generate images using Latent Diffusion Model\"\"\"\n",
+    "    all_images = []\n",
+    "    start_time = time.time()\n",
+    "    \n",
+    "    for i in tqdm(range(0, num_images, batch_size), desc=\"Generating LDM images\"):\n",
+    "        batch_count = min(batch_size, num_images - i)\n",
+    "        with torch.no_grad():\n",
+    "            output = pipeline(batch_size=batch_count, num_inference_steps=num_inference_steps, output_type=\"pt\")\n",
+    "            # Output is in [0, 1] range, convert to [-1, 1] for consistency\n",
+    "            images = output.images * 2 - 1\n",
+    "            all_images.append(images)\n",
+    "    \n",
+    "    inference_time = time.time() - start_time\n",
+    "    return torch.cat(all_images, dim=0), inference_time\n",
     "\n",
-    "def load_stylegan2(pkl_path):\n",
-    "    \"\"\"Load StyleGAN2 generator from pickle file\"\"\"\n",
-    "    with open(pkl_path, 'rb') as f:\n",
-    "        G = pickle.load(f)['G_ema'].to(device)\n",
-    "    G.eval()\n",
-    "    return G\n",
+    "# Generate 50 images\n",
+    "print(\"⏳ Generating LDM images...\")\n",
+    "ldm_images, ldm_time = generate_ldm_images(ldm_pipeline, num_images=50, batch_size=10)\n",
+    "print(f\"✅ LDM: Generated {len(ldm_images)} images in {ldm_time:.1f} seconds\")\n",
     "\n",
-    "def generate_stylegan2_images(G, num_images=32, truncation_psi=0.7):\n",
-    "    \"\"\"Generate images using StyleGAN2\"\"\"\n",
-    "    with torch.no_grad():\n",
-    "        z = torch.randn(num_images, G.z_dim, device=device)\n",
-    "        start_time = time.time()\n",
-    "        # Generate images with truncation trick for better quality\n",
-    "        images = G(z, None, truncation_psi=truncation_psi)\n",
-    "        inference_time = time.time() - start_time\n",
-    "    return images, inference_time\n",
-    "\n",
-    "# Load model\n",
-    "stylegan2_G = load_stylegan2('ffhq256.pkl')\n",
-    "print(f\"✅ StyleGAN2 loaded, z_dim: {stylegan2_G.z_dim}, output resolution: 256x256\")\n",
-    "\n",
-    "# Generate images\n",
-    "stylegan2_images, stylegan2_time = generate_stylegan2_images(stylegan2_G, num_images=32)\n",
-    "print(f\"✅ StyleGAN2: Generated {len(stylegan2_images)} images in {stylegan2_time:.3f} seconds\")\n",
-    "\n",
-    "# Images are in [-1, 1] range already\n",
     "# Visualize\n",
     "fig, axes = plt.subplots(2, 4, figsize=(12, 6))\n",
     "for i, ax in enumerate(axes.flat):\n",
-    "    img = (stylegan2_images[i].permute(1, 2, 0).cpu().numpy() + 1) / 2\n",
+    "    img = (ldm_images[i].permute(1, 2, 0).cpu().numpy() + 1) / 2\n",
     "    ax.imshow(np.clip(img, 0, 1))\n",
     "    ax.axis('off')\n",
-    "plt.suptitle('StyleGAN2-ADA Generated Images (256x256)')\n",
+    "plt.suptitle('LDM Generated Images (CelebA-HQ 256x256)')\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n",
-    "# Go back to main directory\n",
-    "%cd .."
+    "plt.show()"
    ]
   },
   {
@@ -1278,9 +1262,9 @@
     "    inference_time = time.time() - start_time\n",
     "    return torch.cat(all_images, dim=0), inference_time\n",
     "\n",
-    "# Generate 32 images (this takes longer due to diffusion process)\n",
+    "# Generate 50 images (this takes longer due to diffusion process)\n",
     "print(\"⏳ Generating DDPM images (this may take 2-5 minutes)...\")\n",
-    "ddpm_images, ddpm_time = generate_ddpm_images(ddpm_pipeline, num_images=32, batch_size=8)\n",
+    "ddpm_images, ddpm_time = generate_ddpm_images(ddpm_pipeline, num_images=50, batch_size=10)\n",
     "print(f\"✅ DDPM: Generated {len(ddpm_images)} images in {ddpm_time:.1f} seconds\")\n",
     "\n",
     "# Visualize\n",
@@ -1476,7 +1460,7 @@
     "# Real images baseline\n",
     "print(\"\\n📊 Real Images (baseline):\")\n",
     "is_real, is_real_std = calculate_inception_score(real_images, inception_model, splits=5)\n",
-    "fid_real_real = calculate_fid(real_images[:16], real_images[16:], inception_model)\n",
+    "fid_real_real = calculate_fid(real_images[:25], real_images[25:], inception_model)\n",
     "print(f\"   IS: {is_real:.2f} ± {is_real_std:.2f}\")\n",
     "print(f\"   FID (Real vs Real): {fid_real_real:.2f}\")\n",
     "results['Real'] = {'IS': is_real, 'IS_std': is_real_std, 'FID': fid_real_real}\n",
@@ -1489,13 +1473,13 @@
     "print(f\"   FID: {fid_dcgan:.2f}\")\n",
     "results['DCGAN'] = {'IS': is_dcgan, 'IS_std': is_dcgan_std, 'FID': fid_dcgan}\n",
     "\n",
-    "# StyleGAN2\n",
-    "print(\"\\n📊 StyleGAN2-ADA:\")\n",
-    "is_stylegan, is_stylegan_std = calculate_inception_score(stylegan2_images, inception_model, splits=5)\n",
-    "fid_stylegan = calculate_fid(real_images, stylegan2_images, inception_model)\n",
-    "print(f\"   IS: {is_stylegan:.2f} ± {is_stylegan_std:.2f}\")\n",
-    "print(f\"   FID: {fid_stylegan:.2f}\")\n",
-    "results['StyleGAN2'] = {'IS': is_stylegan, 'IS_std': is_stylegan_std, 'FID': fid_stylegan}\n",
+    "# LDM (Latent Diffusion Model)\n",
+    "print(\"\\n📊 LDM (Latent Diffusion):\")\n",
+    "is_ldm, is_ldm_std = calculate_inception_score(ldm_images, inception_model, splits=5)\n",
+    "fid_ldm = calculate_fid(real_images, ldm_images, inception_model)\n",
+    "print(f\"   IS: {is_ldm:.2f} ± {is_ldm_std:.2f}\")\n",
+    "print(f\"   FID: {fid_ldm:.2f}\")\n",
+    "results['LDM'] = {'IS': is_ldm, 'IS_std': is_ldm_std, 'FID': fid_ldm}\n",
     "\n",
     "# DDPM\n",
     "print(\"\\n📊 DDPM (Diffusion):\")\n",
@@ -1814,15 +1798,15 @@
     "print(f\"   Precision: {prec_dcgan:.3f}, Recall: {rec_dcgan:.3f}\")\n",
     "results['DCGAN'].update({'KID': kid_dcgan, 'CMMD': cmmd_dcgan, 'Precision': prec_dcgan, 'Recall': rec_dcgan})\n",
     "\n",
-    "# StyleGAN2 metrics\n",
-    "print(\"\\n📊 StyleGAN2 - Additional Metrics:\")\n",
-    "kid_stylegan = calculate_kid(real_images, stylegan2_images, inception_model)\n",
-    "print(f\"   KID: {kid_stylegan:.4f}\")\n",
-    "cmmd_stylegan = calculate_cmmd(real_images, stylegan2_images)\n",
-    "print(f\"   CMMD: {cmmd_stylegan:.4f}\")\n",
-    "prec_stylegan, rec_stylegan = calculate_precision_recall(real_images, stylegan2_images, inception_model)\n",
-    "print(f\"   Precision: {prec_stylegan:.3f}, Recall: {rec_stylegan:.3f}\")\n",
-    "results['StyleGAN2'].update({'KID': kid_stylegan, 'CMMD': cmmd_stylegan, 'Precision': prec_stylegan, 'Recall': rec_stylegan})\n",
+    "# LDM metrics\n",
+    "print(\"\\n📊 LDM - Additional Metrics:\")\n",
+    "kid_ldm = calculate_kid(real_images, ldm_images, inception_model)\n",
+    "print(f\"   KID: {kid_ldm:.4f}\")\n",
+    "cmmd_ldm = calculate_cmmd(real_images, ldm_images)\n",
+    "print(f\"   CMMD: {cmmd_ldm:.4f}\")\n",
+    "prec_ldm, rec_ldm = calculate_precision_recall(real_images, ldm_images, inception_model)\n",
+    "print(f\"   Precision: {prec_ldm:.3f}, Recall: {rec_ldm:.3f}\")\n",
+    "results['LDM'].update({'KID': kid_ldm, 'CMMD': cmmd_ldm, 'Precision': prec_ldm, 'Recall': rec_ldm})\n",
     "\n",
     "# DDPM metrics\n",
     "print(\"\\n📊 DDPM - Additional Metrics:\")\n",
@@ -1851,27 +1835,27 @@
     "\n",
     "# Create comparison DataFrame\n",
     "comparison_data = {\n",
-    "    'Model': ['DCGAN', 'StyleGAN2-ADA', 'DDPM (Diffusion)'],\n",
+    "    'Model': ['DCGAN', 'LDM (Latent Diffusion)', 'DDPM (Diffusion)'],\n",
     "    'IS ↑': [f\"{results['DCGAN']['IS']:.2f}\", \n",
-    "             f\"{results['StyleGAN2']['IS']:.2f}\", \n",
+    "             f\"{results['LDM']['IS']:.2f}\", \n",
     "             f\"{results['DDPM']['IS']:.2f}\"],\n",
     "    'FID ↓': [f\"{results['DCGAN']['FID']:.2f}\", \n",
-    "              f\"{results['StyleGAN2']['FID']:.2f}\", \n",
+    "              f\"{results['LDM']['FID']:.2f}\", \n",
     "              f\"{results['DDPM']['FID']:.2f}\"],\n",
     "    'KID ↓': [f\"{results['DCGAN']['KID']:.4f}\", \n",
-    "              f\"{results['StyleGAN2']['KID']:.4f}\", \n",
+    "              f\"{results['LDM']['KID']:.4f}\", \n",
     "              f\"{results['DDPM']['KID']:.4f}\"],\n",
     "    'CMMD ↓': [f\"{results['DCGAN']['CMMD']:.4f}\", \n",
-    "               f\"{results['StyleGAN2']['CMMD']:.4f}\", \n",
+    "               f\"{results['LDM']['CMMD']:.4f}\", \n",
     "               f\"{results['DDPM']['CMMD']:.4f}\"],\n",
     "    'Precision ↑': [f\"{results['DCGAN']['Precision']:.3f}\", \n",
-    "                    f\"{results['StyleGAN2']['Precision']:.3f}\", \n",
+    "                    f\"{results['LDM']['Precision']:.3f}\", \n",
     "                    f\"{results['DDPM']['Precision']:.3f}\"],\n",
     "    'Recall ↑': [f\"{results['DCGAN']['Recall']:.3f}\", \n",
-    "                 f\"{results['StyleGAN2']['Recall']:.3f}\", \n",
+    "                 f\"{results['LDM']['Recall']:.3f}\", \n",
     "                 f\"{results['DDPM']['Recall']:.3f}\"],\n",
-    "    'Inference Time (32 imgs)': [f\"{dcgan_time:.2f}s\", \n",
-    "                                  f\"{stylegan2_time:.2f}s\", \n",
+    "    'Inference Time (50 imgs)': [f\"{dcgan_time:.2f}s\", \n",
+    "                                  f\"{ldm_time:.1f}s\", \n",
     "                                  f\"{ddpm_time:.1f}s\"]\n",
     "}\n",
     "\n",
@@ -1908,13 +1892,13 @@
     "    if i == 0:\n",
     "        axes[0, i].set_ylabel('DCGAN', fontsize=12, rotation=0, labelpad=40)\n",
     "\n",
-    "# StyleGAN2 images (middle row)\n",
+    "# LDM images (middle row)\n",
     "for i in range(8):\n",
-    "    img = (stylegan2_images[i].permute(1, 2, 0).cpu().numpy() + 1) / 2\n",
+    "    img = (ldm_images[i].permute(1, 2, 0).cpu().numpy() + 1) / 2\n",
     "    axes[1, i].imshow(np.clip(img, 0, 1))\n",
     "    axes[1, i].axis('off')\n",
     "    if i == 0:\n",
-    "        axes[1, i].set_ylabel('StyleGAN2', fontsize=12, rotation=0, labelpad=40)\n",
+    "        axes[1, i].set_ylabel('LDM', fontsize=12, rotation=0, labelpad=40)\n",
     "\n",
     "# DDPM images (bottom row)\n",
     "for i in range(8):\n",
@@ -1924,7 +1908,7 @@
     "    if i == 0:\n",
     "        axes[2, i].set_ylabel('DDPM', fontsize=12, rotation=0, labelpad=40)\n",
     "\n",
-    "plt.suptitle('Generated Images Comparison: DCGAN vs StyleGAN2 vs DDPM', fontsize=14)\n",
+    "plt.suptitle('Generated Images Comparison: DCGAN vs LDM vs DDPM', fontsize=14)\n",
     "plt.tight_layout()\n",
     "plt.savefig('model_comparison.png', dpi=150, bbox_inches='tight')\n",
     "plt.show()\n",
@@ -1942,8 +1926,8 @@
     "\n",
     "### Models Used:\n",
     "1. **DCGAN** - Basic Deep Convolutional GAN (64×64, upscaled to 256×256)\n",
-    "2. **StyleGAN2-ADA** - State-of-the-art style-based GAN (256×256)\n",
-    "3. **DDPM** - Denoising Diffusion Probabilistic Model with DDIM scheduler (256×256)\n",
+    "2. **LDM** - Latent Diffusion Model from CompVis (256×256) - `CompVis/ldm-celebahq-256`\n",
+    "3. **DDPM** - Denoising Diffusion Probabilistic Model with DDIM scheduler (256×256) - `google/ddpm-celebahq-256`\n",
     "\n",
     "### Metrics Evaluated:\n",
     "| Metric | What it Measures | Better |\n",
@@ -1956,9 +1940,10 @@
     "| **Recall** | Diversity (coverage of real distribution) | Higher ↑ |\n",
     "\n",
     "### Key Observations:\n",
-    "- StyleGAN2 typically achieves best FID/KID scores with fast inference\n",
+    "- LDM operates in latent space making it more efficient than pixel-space diffusion\n",
     "- DDPM produces high-quality images but slower inference (tradeoff with quality)\n",
     "- DCGAN is fast but lower quality (good baseline for comparison)\n",
+    "- Both diffusion models (LDM & DDPM) are trained on CelebA-HQ from HuggingFace\n",
     "- CMMD provides additional perceptual insights using CLIP semantics"
    ]
   }
